# vscp-simulator

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: appimage.yml  cmake-mac.yml  cmake.yml  msbuild.yml
debug/: firmware_example1.json
docs/: README.md  _coverpage.md  _sidebar.md  index.html  introduction.md  setting_up_the_system.md  setting_up_the_system_on_linux.md  setting_up_the_system_on_macintosh.md  setting_up_the_system_on_raspberry_pi.md  setting_up_the_system_on_windows.md  start.md  variables.xml
install/: AppRun  vscp-simulator.desktop  vscpsim.desktop  vscpsim.json
mdf/: README.md  save.xml  sim1_l1.json  sim1_l1.xml  sim_1.xml  ttt.xml  ttt1.xml
src/: CMakeCache.txt  btest.cpp  btest.h  hardware.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  simulation1.h  vscp-projdefs.h  vscp_projdefs.h
template/: README.txt
